Updated ae9 programming

--- a/ZXbSheet.tex
+++ b/ZXbSheet.tex
@@ -26,11 +26,11 @@
 \pagestyle{empty}\begin{tikzpicture} 
 \draw[black] \shapeCard; \newline\newcommand{\Or}{\textbf{OR}};
 \draw[ultra thick] (\cardwidth/2, \cardheight*.56) rectangle (0, \cardheight); 
-\name{The Infecter \image{N9} \hp{60}};
-\setup{Shuffle and place the infection deck next to this mat facedown. }
-\unleash{If the nemesis has 0 nemesis tokens, it gains a nemesis token, reveal the top card of the infection deck, and then the player with the fewest infections gains that infection. Otherwise, each player resolves all of their infections, and the nemesis loses a nemesis token.}
+\name{Garun \image{N7} \hp{60}};
+\setup{Replace a relic in the supply with Dissolver. Garun starts the game with 4 nemesis tokens. }
+\unleash{If this has 0 nemesis tokens, remove 1 power token from Regeneration. Otherwise, advance the Doomsday track.}
 \difficulty{}
-\rules{Infections stay in front of players permanently. newline When a player is exhausted, that player gains two infections instead of Unleash twice. If a player would gain an infection and cannot, each player resolves all of their infections instead.};\diffR{};
+\rules{When a player deals damage to Garun while Garun has a nemesis token, reduce that damage to 1. When Garun has 0 nemesis tokens, reset the Doomsday track to start, place the Regeneration power.};\diffR{};
 \end{tikzpicture}
 
 
