--- a/ZXcList.tex
+++ b/ZXcList.tex
@@ -5,25 +5,113 @@
 \input{tikzcardsTwo.tex}
 \begin{document}
 \begin{center}\begin{tikzpicture} 
-\cardbackground{Minion-witch} 
-\cardimage{n1} 
-\cardtitle{Daughter of Doom} 
+\cardbackground{Relic} 
+\cardimage{N7} 
+\cardtitle{Dissolver} 
 \cardborder{} 
-\cardcontent{When this is dealt 2 or less damage in a single instance, place a barrier token on Diatribe of Despair.} 
-\cardprice{0} 
-\cardhp{35} 
-\sync{0.15}
+\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardprice{3} 
+\sync{0.13}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Minion-witch} 
-\cardimage{n1} 
-\cardtitle{Matron of Malice} 
+\cardbackground{Relic} 
+\cardimage{N7} 
+\cardtitle{Dissolver} 
 \cardborder{} 
-\cardcontent{When this is dealt 3 or more damage in a single instance, place a barrier token on Melody of Madness.} 
+\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{N7} 
+\cardtitle{Dissolver} 
+\cardborder{} 
+\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{N7} 
+\cardtitle{Dissolver} 
+\cardborder{} 
+\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{N7} 
+\cardtitle{Dissolver} 
+\cardborder{} 
+\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{N7} 
+\cardtitle{Dissolver} 
+\cardborder{} 
+\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{N7} 
+\cardtitle{Dissolver} 
+\cardborder{} 
+\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{N7} 
+\cardtitle{Dissolver} 
+\cardborder{} 
+\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{N7} 
+\cardtitle{Dissolver} 
+\cardborder{} 
+\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{N7} 
+\cardtitle{Dissolver} 
+\cardborder{} 
+\cardcontent{Gain 1 charge. \Recall: The nemesis loses 1 nemesis token.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{N7} 
+\cardtitle{Regeneration} 
+\cardborder{} 
+\cardcontent{\Immediately: Place two power tokens on this for each player after the first. \Power 1: Garun gains four nemesis tokens.} 
 \cardprice{0} 
-\cardhp{45} 
-\sync{0.14}
+\sync{0.13}
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
