--- a/ZXcList2.tex
+++ b/ZXcList2.tex
@@ -5,272 +5,508 @@
 \input{tikzcardsTwo.tex}
 \begin{document}
 \begin{center}\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{n2} 
-\cardtitle{Meteoric Cataclysm} 
+\cardbackground{Gem} 
+\cardimage{S8} 
+\cardtitle{Hungering Vimite} 
 \cardborder{} 
-\cardcontent{\Immediately: Destroy all the cards in the most expensive gem supply pile. \newline \Persistent: Unleash twice.} 
-\cardprice{0} 
-\cardhp{8} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{n2} 
-\cardtitle{Disarming Cataclysm} 
-\cardborder{} 
-\cardcontent{\Immediately: The nemesis gains 5 life. For each life the nemesis is unable to gain, Gravehold suffers 1 damage. \newline \Persistent: The players collectively discard two cards in hand and Gravehold suffers 2 damage.} 
-\cardprice{0} 
-\cardhp{8} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{n2} 
-\cardtitle{Monstrous Cataclysm} 
-\cardborder{} 
-\cardcontent{\Immediately: Destroy all the cards in the most expensive relic supply pile. \newline \Persistent: Gravehold suffers damage equal to this minion's current number of shields. If this has no shields, it gains 1 shield.} 
-\cardprice{0} 
-\cardhp{1} 
-\cardshield{3} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{n2} 
-\cardtitle{Obsession of Precision} 
-\cardborder{} 
-\cardcontent{During any player's main phase, that player may discard one prepped spell that costs 2 \Money{} or more to add 2 power tokens to this. \newline \Power 4: Draw a Cataclysm and put it into play. \newline Do not discard this card from play. Instead, add power tokens equal to the number of players in the game plus 5.} 
-\cardprice{0} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{n2} 
-\cardtitle{Obsession of Wealth} 
-\cardborder{} 
-\cardcontent{During any player's main phase that player may discard two prepped spells to add 2 power tokens to this. \newline \Power 2: Draw a Cataclysm and put it into play. \newline Do not discard this card from play. Instead, add power tokens equal to the number of players in the game plus 3.} 
-\cardprice{0} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{n2} 
-\cardtitle{Obsession of Intricacy} 
-\cardborder{} 
-\cardcontent{During any player's main phase, that player may discard a relic in hand that costs 2 \Money{} or more to add 3 power tokens to this. \newline \Power 5: Draw a Cataclysm and put it into play. \newline Do not discard this card from play. Instead, add power tokens equal to the number of players in the game plus 6.} 
-\cardprice{0} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{n2} 
-\cardtitle{Obsession of Perfection} 
-\cardborder{} 
-\cardcontent{During any player's main phase, that player may discard a gem in hand that costs 4 \Money{} or more to add 3 power tokens to this. \newline \Power 5: Draw a Cataclysm and put it into play. \newline Do not discard this card from play. Instead, add power tokens equal to the number of players in the game plus 6.} 
-\cardprice{0} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{n2} 
-\cardtitle{Obsession of Strength} 
-\cardborder{} 
-\cardcontent{During any player's main phase, that player may lose 2 charges to add 3 power tokens to this. \newline \Power 2: Draw a Cataclysm and put it into play. \newline Do not discard this card from play. Instead, add power tokens equal to the number of players in the game plus 3.} 
-\cardprice{0} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{n2} 
-\cardtitle{Obsession of Dominance} 
-\cardborder{} 
-\cardcontent{During any player's main phase, that player may discard a card in hand that costs 5 \Money{} or more to add 3 power tokens to this. \newline \Power 5: Draw a Cataclysm and put it into play. Do not discard this from play. Instead, add power tokens equal to the number of players in the game plus 6.} 
-\cardprice{0} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{n2} 
-\cardtitle{Spiney Trobek} 
-\cardborder{} 
-\cardcontent{Players cannot add power tokens to obsessions while this is in play. \newline \Persistent: Gravehold suffers 2 damage.} 
-\cardprice{2} 
-\cardhp{8} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{n9} 
-\cardtitle{Viralix} 
-\cardborder{} 
-\cardcontent{\Persistent: If the players collectively have fewer than 4 infections, reveal the top card of the infection deck, then any player gains that infection. Otherwise, the nemesis gains 1 nemesis token.} 
-\cardprice{2} 
-\cardhp{9} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{n9} 
-\cardtitle{Blisterkin} 
-\cardborder{} 
-\cardcontent{When a player deals 4 or more damage to this minion in a single instance, that player resolves one of their infections. \newline \Persistent: Gravehold suffers 2 damage.} 
-\cardprice{2} 
-\cardhp{9} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{n9} 
-\cardtitle{Bubbling Veins} 
-\cardborder{} 
-\cardcontent{\To \Discard: Spend 6 \Money{}. \newline \Power 3: Reveal the top two cards of the infection deck. The players collectively gain those infections.} 
-\cardprice{1} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{n9} 
-\cardtitle{Plague Bringer} 
-\cardborder{} 
-\cardcontent{\Immediately: This minion suffers damage equal to the number of players in the game. \newline \Persistent: Gravehold suffers 2 damage. \newline \Or \newline Reveal the top card of the infection deck. The player with the fewest infections gains that infection.} 
-\cardprice{1} 
-\cardhp{7} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{n1} 
-\cardtitle{Melody of Madness 1p} 
-\cardborder{} 
-\cardcontent{\Power 10: Any player suffers 9 damage. Reduce this damage by 3 for each barrier token on this. Then discard all barrier tokens on this. \newline Do not discard this card from play. Instead, add 5 power tokens to this card.} 
-\cardprice{0} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{n1} 
-\cardtitle{Diatribe of Despair 1p} 
-\cardborder{} 
-\cardcontent{\Power 4: Gravehold suffers 7 damage. Reduce this damage by 1 for each barrier token on this. Then discard all barrier tokens on this. \newline Do not discard this card from play. Instead, add 5 power tokens to this card.} 
-\cardprice{0} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{n1} 
-\cardtitle{Melody of Madness 2p} 
-\cardborder{} 
-\cardcontent{\Power 12: Any player suffers 9 damage. Reduce this damage by 3 for each barrier token on this. Then discard all barrier tokens on this. \newline Do not discard this card from play. Instead, add 6 power tokens to this card.} 
-\cardprice{0} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{n1} 
-\cardtitle{Diatribe of Despair 2p} 
-\cardborder{} 
-\cardcontent{\Power 6: Gravehold suffers 7 damage. Reduce this damage by 1 for each barrier token on this. Then discard all barrier tokens on this. \newline Do not discard this card from play. Instead, add 6 power tokens to this card.} 
-\cardprice{0} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{n1} 
-\cardtitle{Melody of Madness 3p} 
-\cardborder{} 
-\cardcontent{\Power 14: Any player suffers 9 damage. Reduce this damage by 3 for each barrier token on this. Then discard all barrier tokens on this. \newline Do not discard this card from play. Instead, add 7 power tokens to this card.} 
-\cardprice{0} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{n1} 
-\cardtitle{Diatribe of Despair 3p} 
-\cardborder{} 
-\cardcontent{\Power 8: Gravehold suffers 7 damage. Reduce this damage by 1 for each barrier token on this. Then discard all barrier tokens on this. \newline Do not discard this card from play. Instead, add 7 power tokens to this card.} 
-\cardprice{0} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{n1} 
-\cardtitle{Melody of Madness 4p} 
-\cardborder{} 
-\cardcontent{\Power 16: Any player suffers 9 damage. Reduce this damage by 3 for each barrier token on this. Then discard all barrier tokens on this. \newline Do not discard this card from play. Instead, add 8 power tokens to this card.} 
-\cardprice{0} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{n1} 
-\cardtitle{Diatribe of Despair 4p} 
-\cardborder{} 
-\cardcontent{\Power 10: Gravehold suffers 7 damage. Reduce this damage by 1 for each barrier token on this. Then discard all barrier tokens on this. \newline Do not discard this card from play. Instead, add 8 power tokens to this card.} 
-\cardprice{0} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{Upgraded-Basic} 
-\cardtitle{Lightning Surge} 
-\cardborder{} 
-\cardcontent{\Power 1: Unleash twice. The player with the most charges suffers 2 damage for each charge they have.} 
+\cardcontent{Gain 2 \Money{}. Any ally may place a Crystal in hand on top of your deck. If they do, gain 1 additional \Money{}.} 
 \cardprice{3} 
-\sync{0.26}
+\sync{0.13}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{n5} 
-\cardtitle{Encrust} 
+\cardbackground{Gem} 
+\cardimage{S8} 
+\cardtitle{Hungering Vimite} 
 \cardborder{} 
-\cardcontent{Unleash. \newline Fuse a card. \newline Fuse a card. \newline Place two \Money{} tokens on a card in stasis.} 
-\cardprice{2} 
-\sync{0.26}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{n5} 
-\cardtitle{Flash Freeze} 
-\cardborder{} 
-\cardcontent{Place a card from the most expensive spell supply pile into stasis. Repeat this twice.} 
+\cardcontent{Gain 2 \Money{}. Any ally may place a Crystal in hand on top of your deck. If they do, gain 1 additional \Money{}.} 
 \cardprice{3} 
-\sync{0.26}
+\sync{0.13}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{n5} 
-\cardtitle{Withered Prophet} 
+\cardbackground{Gem} 
+\cardimage{S8} 
+\cardtitle{Hungering Vimite} 
 \cardborder{} 
-\cardcontent{\Persistent: Unleash. Fuse a card.} 
+\cardcontent{Gain 2 \Money{}. Any ally may place a Crystal in hand on top of your deck. If they do, gain 1 additional \Money{}.} 
 \cardprice{3} 
-\cardhp{15} 
-\sync{0.26}
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{S8} 
+\cardtitle{Hungering Vimite} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money{}. Any ally may place a Crystal in hand on top of your deck. If they do, gain 1 additional \Money{}.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{S8} 
+\cardtitle{Hungering Vimite} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money{}. Any ally may place a Crystal in hand on top of your deck. If they do, gain 1 additional \Money{}.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R7} 
+\cardtitle{Marble Galaxy} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money{} tokens at the end of your turn. \newline Any ally may discard a Marble Galaxy in hand and draw a card. If they do, gain 1 life.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R7} 
+\cardtitle{Marble Galaxy} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money{} tokens at the end of your turn. \newline Any ally may discard a Marble Galaxy in hand and draw a card. If they do, gain 1 life.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R7} 
+\cardtitle{Marble Galaxy} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money{} tokens at the end of your turn. \newline Any ally may discard a Marble Galaxy in hand and draw a card. If they do, gain 1 life.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R7} 
+\cardtitle{Marble Galaxy} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money{} tokens at the end of your turn. \newline Any ally may discard a Marble Galaxy in hand and draw a card. If they do, gain 1 life.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R7} 
+\cardtitle{Marble Galaxy} 
+\cardborder{} 
+\cardcontent{Gain 2 \Money{} tokens at the end of your turn. \newline Any ally may discard a Marble Galaxy in hand and draw a card. If they do, gain 1 life.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R13} 
+\cardtitle{Quickening Globe} 
+\cardborder{} 
+\cardcontent{Destroy this. Place the next card you gain this turn into hand.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R13} 
+\cardtitle{Quickening Globe} 
+\cardborder{} 
+\cardcontent{Destroy this. Place the next card you gain this turn into hand.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R13} 
+\cardtitle{Quickening Globe} 
+\cardborder{} 
+\cardcontent{Destroy this. Place the next card you gain this turn into hand.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R13} 
+\cardtitle{Quickening Globe} 
+\cardborder{} 
+\cardcontent{Destroy this. Place the next card you gain this turn into hand.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R13} 
+\cardtitle{Quickening Globe} 
+\cardborder{} 
+\cardcontent{Destroy this. Place the next card you gain this turn into hand.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R10} 
+\cardtitle{Oracle's Vigor} 
+\cardborder{} 
+\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose any number of pulse tokens. Any ally draws 1 card for each pulse token lost this way.} 
+\cardprice{3} 
+\carddevcost{2} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R10} 
+\cardtitle{Oracle's Vigor} 
+\cardborder{} 
+\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose any number of pulse tokens. Any ally draws 1 card for each pulse token lost this way.} 
+\cardprice{3} 
+\carddevcost{2} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R10} 
+\cardtitle{Oracle's Vigor} 
+\cardborder{} 
+\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose any number of pulse tokens. Any ally draws 1 card for each pulse token lost this way.} 
+\cardprice{3} 
+\carddevcost{2} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R10} 
+\cardtitle{Oracle's Vigor} 
+\cardborder{} 
+\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose any number of pulse tokens. Any ally draws 1 card for each pulse token lost this way.} 
+\cardprice{3} 
+\carddevcost{2} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R10} 
+\cardtitle{Oracle's Vigor} 
+\cardborder{} 
+\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose any number of pulse tokens. Any ally draws 1 card for each pulse token lost this way.} 
+\cardprice{3} 
+\carddevcost{2} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R9} 
+\cardtitle{Visionary Staff} 
+\cardborder{} 
+\cardcontent{Any ally draws two cards and discards two cards. \newline Or \newline Resolve a recall effect in any player's discard pile up to three times.} 
+\cardprice{6} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R9} 
+\cardtitle{Visionary Staff} 
+\cardborder{} 
+\cardcontent{Any ally draws two cards and discards two cards. \newline Or \newline Resolve a recall effect in any player's discard pile up to three times.} 
+\cardprice{6} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R9} 
+\cardtitle{Visionary Staff} 
+\cardborder{} 
+\cardcontent{Any ally draws two cards and discards two cards. \newline Or \newline Resolve a recall effect in any player's discard pile up to three times.} 
+\cardprice{6} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R9} 
+\cardtitle{Visionary Staff} 
+\cardborder{} 
+\cardcontent{Any ally draws two cards and discards two cards. \newline Or \newline Resolve a recall effect in any player's discard pile up to three times.} 
+\cardprice{6} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R9} 
+\cardtitle{Visionary Staff} 
+\cardborder{} 
+\cardcontent{Any ally draws two cards and discards two cards. \newline Or \newline Resolve a recall effect in any player's discard pile up to three times.} 
+\cardprice{6} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S10} 
+\cardtitle{Boundless Spark} 
+\cardborder{} 
+\cardcontent{\Recall: Place this into your hand. \newline \Cast: Deal 2 damage.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S10} 
+\cardtitle{Boundless Spark} 
+\cardborder{} 
+\cardcontent{\Recall: Place this into your hand. \newline \Cast: Deal 2 damage.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S10} 
+\cardtitle{Boundless Spark} 
+\cardborder{} 
+\cardcontent{\Recall: Place this into your hand. \newline \Cast: Deal 2 damage.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S10} 
+\cardtitle{Boundless Spark} 
+\cardborder{} 
+\cardcontent{\Recall: Place this into your hand. \newline \Cast: Deal 2 damage.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S10} 
+\cardtitle{Boundless Spark} 
+\cardborder{} 
+\cardcontent{\Recall: Place this into your hand. \newline \Cast: Deal 2 damage.} 
+\cardprice{3} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S9} 
+\cardtitle{Jeweled Shrapnel} 
+\cardborder{} 
+\cardcontent{ \Cast: Deal 5 damage. Gain two Ethereal Crystals and place them on top of your deck.} 
+\cardprice{4} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S9} 
+\cardtitle{Jeweled Shrapnel} 
+\cardborder{} 
+\cardcontent{ \Cast: Deal 5 damage. Gain two Ethereal Crystals and place them on top of your deck.} 
+\cardprice{4} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S9} 
+\cardtitle{Jeweled Shrapnel} 
+\cardborder{} 
+\cardcontent{ \Cast: Deal 5 damage. Gain two Ethereal Crystals and place them on top of your deck.} 
+\cardprice{4} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S9} 
+\cardtitle{Jeweled Shrapnel} 
+\cardborder{} 
+\cardcontent{ \Cast: Deal 5 damage. Gain two Ethereal Crystals and place them on top of your deck.} 
+\cardprice{4} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S9} 
+\cardtitle{Jeweled Shrapnel} 
+\cardborder{} 
+\cardcontent{ \Cast: Deal 5 damage. Gain two Ethereal Crystals and place them on top of your deck.} 
+\cardprice{4} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S23} 
+\cardtitle{Amethyst Launcher} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 6 damage. Any ally may destroy a card in hand. Gain two Ethereal Crystals and place them on top of your deck.} 
+\cardprice{6} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S23} 
+\cardtitle{Amethyst Launcher} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 6 damage. Any ally may destroy a card in hand. Gain two Ethereal Crystals and place them on top of your deck.} 
+\cardprice{6} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S23} 
+\cardtitle{Amethyst Launcher} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 6 damage. Any ally may destroy a card in hand. Gain two Ethereal Crystals and place them on top of your deck.} 
+\cardprice{6} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S23} 
+\cardtitle{Amethyst Launcher} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 6 damage. Any ally may destroy a card in hand. Gain two Ethereal Crystals and place them on top of your deck.} 
+\cardprice{6} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S23} 
+\cardtitle{Amethyst Launcher} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 6 damage. Any ally may destroy a card in hand. Gain two Ethereal Crystals and place them on top of your deck.} 
+\cardprice{6} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S24} 
+\cardtitle{Ancient Focuser} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 3 damage. If the relic supply piles are missing three or more cards, deal 3 additional damage.} 
+\cardprice{6} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S24} 
+\cardtitle{Ancient Focuser} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 3 damage. If the relic supply piles are missing three or more cards, deal 3 additional damage.} 
+\cardprice{6} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S24} 
+\cardtitle{Ancient Focuser} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 3 damage. If the relic supply piles are missing three or more cards, deal 3 additional damage.} 
+\cardprice{6} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S24} 
+\cardtitle{Ancient Focuser} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 3 damage. If the relic supply piles are missing three or more cards, deal 3 additional damage.} 
+\cardprice{6} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S24} 
+\cardtitle{Ancient Focuser} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 3 damage. If the relic supply piles are missing three or more cards, deal 3 additional damage.} 
+\cardprice{6} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S25} 
+\cardtitle{Obliterating Arc} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 7 damage. Destroy one card from this supply pile. If you can't, suffer 2 damage.} 
+\cardprice{7} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S25} 
+\cardtitle{Obliterating Arc} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 7 damage. Destroy one card from this supply pile. If you can't, suffer 2 damage.} 
+\cardprice{7} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S25} 
+\cardtitle{Obliterating Arc} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 7 damage. Destroy one card from this supply pile. If you can't, suffer 2 damage.} 
+\cardprice{7} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S25} 
+\cardtitle{Obliterating Arc} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 7 damage. Destroy one card from this supply pile. If you can't, suffer 2 damage.} 
+\cardprice{7} 
+\sync{0.13}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S25} 
+\cardtitle{Obliterating Arc} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 7 damage. Destroy one card from this supply pile. If you can't, suffer 2 damage.} 
+\cardprice{7} 
+\sync{0.13}
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
