--- a/ZXcList3.tex
+++ b/ZXcList3.tex
@@ -4,32 +4,5 @@
 \input{colors.tex}
 \input{tikzcardsTwo.tex}
 \begin{document}
-\begin{center}\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{Treasure} 
-\cardtitle{Auren's Copper Structure} 
-\cardborder{} 
-\cardcontent{Gain 1 \Money. \newline If you've cast three or more spells this turn, gain 1 charge and 1 \Money{}.} 
-\cardprice{0} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardimage{Treasure} 
-\cardtitle{Lilly's Voidling Lure} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 1 damage. \newline If a minion from the nemesis deck is defeated this way, any ally draws a card and gains 1 \Money{} token.} 
-\cardprice{0} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{Treasure} 
-\cardtitle{Looking Glass} 
-\cardborder{} 
-\cardcontent{When a player focuses a breach, reveal the top card of the turn order deck. You may place the revealed card on the bottom.} 
-\cardprice{2} 
-\end{tikzpicture}
-\hspace{-4mm}
-\end{center}
+\begin{center}\end{center}
 \end{document}
