--- a/charSheetDezmodia.tex
+++ b/charSheetDezmodia.tex
@@ -5,10 +5,10 @@
 \cardborder 
 \basicinfo 
 \name{Dezmodia}{m4}
-\ability{Tempest Sigil: Activate during your main phase: Any player destroys an opened breach and returns any spells prepped to that breach to their hand. That player gains an evolution token.}{5}
+\ability{Tempest Sigil: Activate during your main phase: Any player destroys up to three cards in hand. If those cards' total cost is 6 \Money{} or more, that player gains an evolution token. \newline \Or \newline Any player focuses each breach.}{4}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
-\startingHand{Suction Shard}{Crystal}{Crystal}{Spark}{Spark}
-\notes{Evolution tokens: Whenever you gain a charge, gain an additional charge. Draw 1 extra card per turn. Spells cast deal +1 damage. When you gain aether, gain 1 additional aether. When you suffer damage, suffer 1 less damage.}
+\startingHand{Breach Shard}{Crystal}{Crystal}{Spark}{Spark}
+\notes{}
 \startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{2}{rent3.png}{1}
 \end{tikzpicture}
 
