--- a/charSheetDezmodia2.tex
+++ b/charSheetDezmodia2.tex
@@ -5,11 +5,11 @@
 \cardborder 
 \basicinfo 
 \name{Dezmodia2}{m5}
-\ability{Tempest Sigil: Activate during your main phase: Any player destroys an opened breach and returns any spells prepped to that breach to their hand. That player gains a random Tier 2 treasure or a Tier 3 treasure. Starting with tier 2 treasure, alternating with each ability use}{5}
-\startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
-\startingHand{Suction Shard}{Crystal}{Crystal}{Spark}{Spark}
-\notes{}
-\startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{2}{rent3.png}{1}
+\ability{Tempest Sigil: Activate during your main phase: Reveal the top two cards of the Dezmodia's Stash and choose one to draw and one to put on the bottom of that deck. \newline \Or \newline Deal 4 damage for each card from Dezmodia's Stash in play.}{4}
+\startingDeck{Energized Stone}{Crystal}{Crystal}{Crystal}{Spark}
+\startingHand{Vision Shard}{Crystal}{Crystal}{Spark}{Spark}
+\notes{Shuffle and place the 7 tier 2 treasures that come with Dezmodia next to her mat to form Dezmodia's Stash. You may add additional tier 2 treasures from your collection to this deck, but it must start with at least 7 cards.}
+\startingPrep{own0.png}{1}{rent1.png}{4}{rent2.png}{2}{rent3.png}{1}
 \end{tikzpicture}
 
  \end{document}
