--- a/charSheetLost.tex
+++ b/charSheetLost.tex
@@ -5,11 +5,11 @@
 \cardborder 
 \basicinfo 
 \name{Lost}{m8}
-\ability{Meek's Might: Activate during your main phase: \newline Any ally returns up to three gems in their discard pile to their hand. \newline \Or \newline Any player may discard each gem in hand they have. Deal damage equal to the cost of gems discarded this way.}{6}
+\ability{Meek's Might: Activate during your main phase: \newline Any ally returns up to three gems in their discard pile to their hand. \newline \Or \newline Any player may discard up to three gems in hand. That player gains spells from the supply with total cost less than the total cost of the gems discarded and places those spells into their hand.}{5}
 \startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
 \startingHand{Soul Forge}{Crystal}{Crystal}{Crystal}{Spark}
 \notes{Set aside all of the Crystalline cards. These form the Forged deck. Cards in this deck can only be gained using Lost's Soul Forge.}
-\startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{2}{rent3.png}{2}
+\startingPrep{own0.png}{1}{rent1.png}{4}{rent2.png}{2}{rent3.png}{2}
 \end{tikzpicture}
 
  \end{document}
