--- a/charSheetNook1.tex
+++ b/charSheetNook1.tex
@@ -5,11 +5,11 @@
 \cardborder 
 \basicinfo 
 \name{Nook1}{m2}
-\ability{Condense Aether: Activate during your main phase: \newline Prep any number of spells in hand to your breach, ignoring space restrictions. \newline \Or \newline Upgrade the prototype breach once, spending knowledge for the appropriate upgrade.}{5}
-\startingDeck{Mystic Sway}{Crystal}{Crystal}{Crystal}{Spark}
-\startingHand{Mystic Sway}{Crystal}{Crystal}{Crystal}{Crystal}
-\notes{Nook's III breach is the prototype breach. When a spell is cast from the prototype breach, gain 1 knowledge. Upgrades for prototype breach: 1 knowledge, +1 damage. 3 knowledge, +3 damage. 2 knowledge, gain a charge. 2 knowledge, 2 spells may be prepped to this breach. 6 knowledge, +5 damage.}
-\startingPrep{}{1}{}{1}{own2.png}{1}{}{1}
+\ability{Condense Aether: Activate during your main phase: \newline Prep any number of spells in hand to your breach, ignoring space restrictions. \newline \Or \newline Upgrade the prototype breach once, spending knowledge for the appropriate upgrade.}{4}
+\startingDeck{Mystic Sway}{Crystal}{Crystal}{Crystal}{Crystal}
+\startingHand{Mystic Sway}{Crystal}{Crystal}{Crystal}{Temporal Spark}
+\notes{Nook's IV breach is the prototype breach. When a spell is cast from the prototype breach, gain 1 knowledge. No +1 damage. Nook's prototype breach cannot be destroyed.}
+\startingPrep{}{1}{}{1}{}{1}{rent3.png}{3}
 \end{tikzpicture}
 
  \end{document}
