--- a/charSheetNook2.tex
+++ b/charSheetNook2.tex
@@ -5,10 +5,10 @@
 \cardborder 
 \basicinfo 
 \name{Nook2}{m3}
-\ability{Time Ripple: Activate during your main phase: \newline Destroy up to three cards with Crystal or Spark in their name in your hand or discard pile. You may gain a card from the destroyed zone with Crystal or Spark in its name.}{4}
+\ability{Time Ripple: Activate during your main phase: \newline Destroy up to three cards with Crystal or Spark in their name in your hand or discard pile. Gain a card from the destroyed zone with Crystal or Spark in its name.}{5}
 \startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
 \startingHand{Superior Crystal}{Crystal}{Crystal}{Crystal}{Superior Spark}
-\notes{Super, Infused, Cracked, Empty (3/2/1/0 money or damage), each degrades into the lower tier on play or cast}
+\notes{Place the Infused, Dim, and Empty Crystal and Sparks next to this mat.}
 \startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{2}{rent3.png}{2}
 \end{tikzpicture}
 
