--- a/charSheetNumyagda.tex
+++ b/charSheetNumyagda.tex
@@ -7,8 +7,8 @@
 \name{Numyagda}{m13}
 \ability{Devour Magic: Activate anytime: Lose any amount of knowledge to change one number on a nemesis card by the amount of knowledge lost. \newline \Or \newline Gain 4 knowledge.}{4}
 \startingDeck{Knollite}{Crystal}{Crystal}{Crystal}{Spark}
-\startingHand{Ancient Eye}{Crystal}{Crystal}{Crystal}{Spark}
-\notes{}
+\startingHand{Ancient Eye}{Crystal}{Crystal}{Crystal}{Crystal}
+\notes{Numbers on cards include anything in the main body of the card such as the effect when you cast a spell, play a gem or relic or the resolution text of an attack or power. The cost of a card, persistent effect of a minion, minion life, shields, Power X, to discard effects, and the nemesis tier of a card are also valid. Numbers, written in text or as numerals count. Words such as twice, or thrice cannot be modified. 'a' and 'the' are not numbers and cannot be modified. Ex: "Draw a card". Numbers cannot be reduced below 0.}
 \startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{2}{rent3.png}{2}
 \end{tikzpicture}
 
