--- a/charSheetQu.tex
+++ b/charSheetQu.tex
@@ -5,11 +5,11 @@
 \cardborder 
 \basicinfo 
 \name{Qu}{m9}
-\ability{Duality Embrace: Activate during your main phase: \newline Reset an opened breach to its starting position. If you do, gain cards from any supply pile equal to the number of the breach - 1. If you're in Taker form, place them on top of your deck. If you're in Giver form, place them into any ally's hand.}{6}
+\ability{Duality Embrace: Activate during your main phase: \newline If in Giver Form, return up to three cards from your discard pile to any ally's hand. Otherwise, any ally returns up to three cards from their discard pile to their hand.}{6}
 \startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
 \startingHand{Molded Valite}{Crystal}{Crystal}{Crystal}{Spark}
-\notes{Form token has Giver and Taker sides. Giver: When you gain a card, place it on top of any ally's deck and focus your closed breach with the lowest cost. Then flip this token. Taker: When an ally gains a card, Qu may gain that card instead. If she does, that ally gains 1 charge. Then flip this token.}
-\startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{1}{rent3.png}{1}
+\notes{Form token has Giver and Taker sides and starts on Giver. }
+\startingPrep{own0.png}{1}{rent1.png}{4}{rent2.png}{1}{rent3.png}{1}
 \end{tikzpicture}
 
  \end{document}
