--- a/charSheetRemnant.tex
+++ b/charSheetRemnant.tex
@@ -6,7 +6,7 @@
 \basicinfo 
 \name{Remnant}{m1}
 \ability{Ephemera Masque: Activate during your main phase: Place up to two spells in your discard pile into your hand. You may prep one additional spell to your III and IV breach. \newline \Or \newline Gravehold gains 5 life.}{6}
-\startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
+\startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
 \startingHand{Violet Shard}{Crystal}{Crystal}{Spark}{Spark}
 \notes{When a spell is cast from Remnant's III or IV breach, any ally returns a card in their discard pile to their hand that costs 5 \Money{} or less. No +1 damage on these breaches.}
 \startingPrep{own0.png}{1}{rent1.png}{2}{rent2.png}{2}{rent3.png}{1}
