--- a/charSheetYan Magda.tex
+++ b/charSheetYan Magda.tex
@@ -8,8 +8,8 @@
 \ability{Devour Magic: Activate during your main phase: Cast up to 3 spells collectively prepped by any players. Those spells deal 3 additional damage. Then, reset the breaches those spells were cast from to their starting positions. \newline \Or \newline Any player opens a breach.}{5}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
 \startingHand{Eldritch Eye}{Crystal}{Crystal}{Crystal}{Spark}
-\notes{Yan Magda's III and IV breaches are the Incanted breaches. When a spell is cast from an Incanted breach, any player focuses a breach.}
-\startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{2}{rent3.png}{2}
+\notes{Yan Magda's III and IV breaches are the Incanted breaches. When a spell is cast from an Incanted breach, any player focuses a breach. These breaches still have +1 damage while opened.}
+\startingPrep{own0.png}{1}{rent1.png}{4}{rent2.png}{2}{rent3.png}{2}
 \end{tikzpicture}
 
  \end{document}
