--- a/tikzcardsTwo.tex
+++ b/tikzcardsTwo.tex
@@ -13,6 +13,7 @@
 \newcommand{\BloodMagic}{\textbf{Blood Magic}}
 \newcommand{\Money}{\includegraphics[height = .4cm]{money}}
 \newcommand{\Or}{\textbf{OR}}
+\newcommand{\Recall}{\textbf{RECALL}}
 \newcommand{\Link}{\newline\textbf{Link:} Two spells with link may be prepped to the same breach.}
 \newcommand{\Name}{\hspace{20mm}}
 \newcommand{\Echo}{\textbf{Echo}} %(Cast this spell without discarding it, then cast it again.)}
@@ -136,7 +137,7 @@
 }
 
 \newcommand{\sync}[1]{
-	\node at (\cardwidth*.87, \cardheight*.9) {\tiny{#1}};
+	\node at (\cardwidth*.88, \cardheight*.85) {\tiny{#1}};
 }
 
 \newcommand{\cardborder}{
