--- a/charSheetPsyker.tex
+++ b/charSheetPsyker.tex
@@ -5,11 +5,11 @@
 \cardborder 
 \basicinfo 
 \name{Psyker}{m10}
-\ability{Enrapture: Activate during your main phase: Gain 4 corruption. Each ally chooses one of the following effects and resolves it three times: draw a card, gains a charge, and focuses a breach.}{5}
+\ability{Vent: Activate during your main phase: Lose all of your corruption. Any ally draws a card. Repeat this for each corruption lost this way.}{6}
 \startingDeck{Purge}{Crystal}{Crystal}{Crystal}{Shower of Coals}
 \startingHand{Purge}{Crystal}{Crystal}{Crystal}{Shower of Coals}
-\notes{If you have 5 or more corruption, suffer 10 damage. Then, each minion and the nemesis suffer 20 damage. Lose all of your corruption.}
-\startingPrep{}{1}{rent1.png}{1}{rent2.png}{2}{rent3.png}{2}
+\notes{If you have 5 or more corruption, each minion and the nemesis suffer 10 damage. Then, suffer 10 damage and lose all of your corruption.}
+\startingPrep{}{1}{rent1.png}{2}{rent2.png}{2}{rent3.png}{2}
 \end{tikzpicture}
 
  \end{document}
